# superSplat-rotate

./: .gitignore  CLAUDE.md  PIPELINE.md  PIPELINE_V2.md  PIPELINE_V3.md  README.md  package-lock.json  package.json  pyproject.toml  rollup.config.mjs  supersplat.code-workspace  test_ssh_concurrent.py  test_ssh_popen_vs_run.py  test_ssh_worker4.py
.claude/: settings.json  settings.local.json
Docs/: HANDOFF_2026-06-05.md  HANDOFF_2026-06-09.md  HANDOFF_2026-06-24_v4.md  HANDOFF_2026_07_10_V8.md  PLAN_2026-06-09_pipeline_v2.md  PLAN_2026-06-09_timeline_png_export.md  V5_AUTOMATION.md  V5_V6_USAGE.md  gltf_to_cameras_json_详解.md  migration-cameras-intrinsics-distortion.md  v8-daemon-design.md  v8-daemon-usage.md  v8-handoff.md
scripts/: serve-dist.mjs  verify-gt-overlay.mjs  with-node20.mjs
src/: camera-poses.ts  camera.ts  controllers.ts  editor.ts  file-handler.ts  render.ts  sw.ts
test/: test_cleanup.py  test_frame_ready.py  test_kill_worker.py  test_scp_speed.py  test_server.py  test_train_state.py
tills/: WORKFLOW.md  WorkFlow_1.md  _distributed.py  _shared.py  blend_frames.py  bridge_interpolate.py  clip_config.json  clip_ply.py  colmap_bin_to_json.py  extract_camera.py  fuse_config.json  fuse_ply.py  gltf_to_cameras_json.py  interpolate_cameras_circle.py  merge_trajectory.py  paths.py  pngs_to_mp4.py  run_pipeline.py  run_pipeline_v2.py  run_pipeline_v3.py  run_pipeline_v4.py  run_pipeline_v5.py  run_pipeline_v6.py  run_pipeline_v7.py
tills_ply/: clip_config.json  clip_ply.py  fuse_config.json  fuse_ply.py  interpolate_cameras_circle.py  ply_pipeline.py  (+3 more)
(+57 files in other folders)
