[project]
name = "supersplat-pipeline"
version = "7.0"
description = "SuperSplat 3DGS pipeline — Playwright automation, PLY processing, distributed training"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "playwright",
]

[tool.uv]
# All Python commands must use `uv run python` prefix.
# Example: uv run python -m tills.server.train_daemon --config CameraData/05/pipeline.json
